k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    type: NodePort
    ports:
        - name: http
          port: 8080
    selector:
        app: main-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: main-service
    labels:
        app: main-service
spec:
    selector:
        matchLabels:
            app: main-service
    replicas: 2 # No of replica of your api
    template:
        metadata:
            labels:
                app: main-service
        spec:
            containers:
                - name: main-service
                  image: main-service:latest # TODO: change the image name based on Cloud Provider
                  volumeMounts:
                      - name: secret-volume
                        mountPath: /usr/app/dist/var
                        readOnly: true
                  ports:
                      - containerPort: 8080
                        protocol: TCP
                  resources:
                      limits:
                          memory: 2Gi # maximum RAM allocate to container
                          cpu: 1000m
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      initialDelaySeconds: 10
                      periodSeconds: 20
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      initialDelaySeconds: 10
                      periodSeconds: 5
            volumes:
                - name: secret-volume
                  secret:
                      secretName: main-service-secrets
    strategy:
        # To have maximum availability during conatiner update
        rollingUpdate:
            maxSurge: 1 # <2>
            maxUnavailable: 0 # <3>
        type: RollingUpdate # <1>
