k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
    name: api
spec:
    rules:
        - http:
              paths:
                  - backend:
                        service:
                            name: api
                            port:
                                number: 8080
                    path: /
                    pathType: ImplementationSpecific
